# CoverAI

./: .env  .env.template  .flake8  .gitignore  README.md  package.json  pyproject.toml
ai/: manage.py  pyproject.toml
ai/Kandinsky-3/kandinsky3/: __init__.py  condition_encoders.py  condition_processors.py  inpainting_pipeline.py  movq.py  setup.py  t2i_pipeline.py  utils.py
ai/Kandinsky-3/kandinsky3/model/: diffusion.py  nn.py  unet.py  utils.py
ai/requirements/: test.txt
api/: README.md  go.mod
api/cmd/: main.go
api/config/: local.yaml.template
api/internal/config/: config.go
api/internal/storage/: storage.go
backend/: .flake8  .gitignore  manage.py  pyproject.toml
backend/apps/api/: apps.py  urls.py
backend/apps/chat/: admin.py  apps.py  models.py  validators.py
backend/apps/core/: apps.py  models.py
backend/apps/feedback/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/news/: admin.py  apps.py  managers.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/apps/users/: admin.py  apps.py  backends.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/backend/: settings.py  urls.py
backend/requirements/: dev.txt  prod.txt  test.txt
frontend/: .prettierrc.cjs  babel.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.scss  App.tsx  index.css  index.scss  main.tsx
frontend/src/config/: routes.tsx
frontend/src/store/: index.ts
frontend/src/stores/: GenerationStore.ts
frontend/src/styles/: _animations.scss  _fonts.scss  _mixins.scss  _variables.scss
frontend/src/types/: Auth.ts  CreateChatModalProps.ts  IChat.ts  IChatSidebar.ts  (+7 more)
requirements/: dev.txt  test.txt
server/: database.py  main.py  pyproject.toml  settings.py
server/models/: user.py
server/requirements/: dev.txt  prod.txt  test.txt
(+76 files in other folders)
